[project]
name = "tinkoff-mcp"
version = "0.1.0"
description = "Read-only MCP server for the T-Invest API (T-Bank / Tinkoff Investments). Exposes portfolio, P&L, operations, instruments, market data and signals to MCP-capable clients (Claude Desktop, etc.). Unofficial, not affiliated with T-Bank."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "TinkoffMCP contributors" }]
keywords = ["mcp", "tinkoff", "tbank", "t-invest", "investments", "portfolio", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "mcp[cli]>=1.2.0,<2",
    "httpx>=0.27.0,<1",
]

[project.scripts]
tinkoff-mcp = "tinkoff_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tinkoff_mcp"]

[tool.hatch.build.targets.wheel.force-include]
"certs/russian_trusted_ca.pem" = "tinkoff_mcp/_certs/russian_trusted_ca.pem"
